note viewed and updated date works
